--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.17.19",
+    "@types/qrcode": "^1.5.6",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
