--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
     "@types/express": "^5.0.1",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
