--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "express": "^5.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
+    "mongodb": "^7.0.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.3.10",
