--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "mongoose": "^8.0.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.7",
     "qrcode": "^1.5.3"
   },
